[package]
name = "destru"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15.8"
chrono = { version = "0.4.39", features = ["serde"]}
sqlx = { version = "0.8.3", features = ["mysql", "runtime-async-std", "macros", "chrono", "time"] }