[package]
name = "destru"
version = "1.1.2"
edition = "2024"
authors = ["557 <557@destru.org>"]

[dependencies]
actix-web = "4.10.2"
actix-rt = "2.10.0"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"]}
sqlx = { version = "0.8.3", features = [
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio-rustls",
] }
dotenvy = "0.15.7"
log = "0.4.26"
env_logger = "0.11.7"
sqids = "0.4.2"
lazy_static = "1.5.0"
thiserror = "2.0.12"
regex = "1.11.1"
argon2 = "0.6.0-pre.1"
jsonwebtoken = "9.3.1"